# elitegl

./: AUTHORS  COPYING  ChangeLog  Makefile.in  README  aclocal.m4  config.guess  config.sub  configure  configure.in  missing  mkinstalldirs
src/: Makefile.am  Makefile.in  alg_gfx.c  alg_main.c  config.h  dirlist.c  dirlist.h  docked.c  docked.h  elite.c  elite.h  file.c  file.h  gfx.h  input.c  input.h  intro.c  intro.h  keysyms.h  loadsave.c  loadsave.h  main.h  makefile-linux  missions.c  missions.h  mp3.c  mp3.h  options.c  options.h  pilot.c  pilot.h  planet.c  planet.h  random.c  random.h  shipdata.c  shipdata.h  shipface.c  shipface.h  sound.c  (+13 more)
