bin_PROGRAMS = elitegl

elitegl_SOURCES =				\
	alg_gfx.c alg_main.c dirlist.c docked.c \
	elite.c intro.c loadsave.c missions.c   \
	options.c planet.c random.c shipdata.c  \
	shipface.c sound.c space.c stars.c      \
	swat.c threed.c trade.c vector.c        \
	mp3.c file.c input.c pilot.c            \
                                                \
	dirlist.h docked.h elite.h gfx.h        \
	intro.h keysyms.h loadsave.h main.h     \
	missions.h options.h planet.h random.h  \
	shipdata.h shipface.h sound.h space.h   \
	stars.h swat.h threed.h trade.h         \
	vector.h mp3.h file.h input.h pilot.h   \
	config.h

EXTRA_DIST = nkres.rc newkind.ico

